# Haskell-Dev

./: .gitignore  Dockerfile  run.hs
docker/: build.sh  run.sh
euler/: euler.cabal  stack.yaml
euler/app/: Main.hs
euler/src/: Solutions.hs  Util.hs
euler/src/Solutions/: S1.hs  S10.hs  S2.hs  S3.hs  S4.hs  S5.hs  S551.hs  S6.hs  S7.hs  S8.hs  S9.hs
euler/src/Solutions/1/: main.hs
euler/src/Util/: Consts.hs
euler/test/: LibSpec.hs  UtilSpec.hs
euler/test/Solutions/: S10Spec.hs  S1Spec.hs  S2Spec.hs  S3Spec.hs  S4Spec.hs  S551Spec.hs  S5Spec.hs  S6Spec.hs  S7Spec.hs  S8Spec.hs
euler/test/Util/: ConstsSpec.hs
src/: Util.hs  UtilSpec.hs
src/Solutions/1/tests/: test.1.txt
src/Utils/: Consts.hs
util/: IDEAS.md  util.cabal
util/app/: Main.hs
util/src/: Celestia.hs
util/src/Celestia/: Data.hs  Examples.hs  Util.hs
util/src/Celestia/Data/: List.hs
util/src/Celestia/Examples/: STM.hs
util/src/Celestia/Util/: .Math.hs.swo  Math.hs
util/test/: CelestiaSpec.hs
util/test/Celestia/Data/: ListSpec.hs
util/test/Celestia/Util/: MathSpec.hs
