name:                euler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/euler#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable euler
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

library
  hs-source-dirs:
    src
  ghc-options: -Wall
  build-depends:
    base == 4.*
  exposed-modules:
    Util
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
    src
  ghc-options: -Wall 
  build-depends:
      base == 4.*
    , euler
    , hspec == 2.*
  other-modules:
  default-language: Haskell2010

