name:                euler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/euler#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Util
                     , Util.Consts
                     , Solutions
                     , Solutions.S1
                     , Solutions.S2
                     , Solutions.S3
                     , Solutions.S4
                     , Solutions.S5
                     , Solutions.S6
                     , Solutions.S7
  build-depends:       base >= 4.7 && < 5
                     , util
  default-language:    Haskell2010

executable euler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , euler
  default-language:    Haskell2010

test-suite euler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , euler
                     , hspec
                     , util
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       UtilSpec
                     , Util.ConstsSpec
                     , Solutions.S1Spec
                     , Solutions.S2Spec
                     , Solutions.S3Spec
                     , Solutions.S4Spec
                     , Solutions.S5Spec
                     , Solutions.S6Spec
                     , Solutions.S7Spec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/euler
