name:                util
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/util#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Celestia
                     , Celestia.Util
                     , Celestia.Util.Math
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable util-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , util
  default-language:    Haskell2010

test-suite util-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       CelestiaSpec
                     , Celestia.Util.MathSpec
  main-is:             Spec.hs
  build-depends:       base
                     , util
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/util

